--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <html>
-  <head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<head>
+  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-    <title>5280 Landmarks</title>
-    <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
-    <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
-  </head>
-  <body>
-
+  <title>5280 Landmarks</title>
+  <link rel="stylesheet" href="stylesheets/reset.css" title="text/css" />
+  <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
+</head>
+<body>
+  <header>
+      <h1 style="float: left; font-size:2em; padding: 10px" title="Denver Landmarks">5280 Landmarks</h1>
+      <a href="#" style="font-size: 1em; float: right; color: white"> Login </h2>
+  </header>
+  <nav>Building Art Featured</nav>
+  <article>
+    <img src=images/1.jpg; width="75%">
+  </article>
+  <aside style"float: right">
+    <h3>Larimer Square></h3>
+    <img src=./images/2.jpg; width="15%">
   </body>
-</html>
-
-
-
-
+  </html>
