Fixed panels, need to adjust spacing

--- a/index.html
+++ b/index.html
@@ -17,18 +17,18 @@
     </div>
   </header>
   <nav>
-    <a href="#" style="vertical-align: middle; color: white; padding: 2px">Building</a>
-    <a href="#" style="vertical-align: middle; color: white; padding: 2px">Art</a>
-    <a href="#" style="vertical-align: middle; color: white; padding: 2px">Featured</a>
+    <a href="#" style="vertical-align: middle; color: white; height: 100%">Building</a>
+    <a href="#" style="vertical-align: middle; color: white; height: 100%">Art</a>
+    <a href="#" style="vertical-align: middle; color: white; height: 100%">Featured</a>
   </nav>
-
+  <section>
   <article>
-    <img src="images/1.jpg"; style ="width: 100%">
+    <img src="images/1.jpg" style="width: 100%">
     <h2 style="font-size: 1.5em">
       <b>Denver Art Museum</b>
     </h2>
     <br>
-    <p>
+      <p style="width: 100%">
       Lorem ipsum dolor sit amet, quis idque munere est ex. Eos id soluta
       meliore menandri, sed ex graeci prompta sapientem. Cum in verterem
       partiendo, quod partiendo principes vix et. Ne eam virtute abhorreant.
@@ -36,41 +36,45 @@
       recusabo salutatus eu.
     </p>
     <br>
-    <p>
-      Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci
+<p style="width: 100%">
+        Mea adhuc persecuti in, dolorum mentitum ullamcorper his ut. Graeci
       scriptorem cum ea, an ignota signiferumque nec. No dicunt sanctus moderatius
       sed, meliore inermis ei mea. Utinam impedit maiestatis sea ad, quis
       efficiendi eu mel, ea solet placerat phaedrum vis. Et vix causae aliquam,
       commodo blandit imperdiet ex his.
     </p>
     <br>
-    <p>
-      Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora
+<p style="width: 100%">
+        Duo an eleifend omittantur, te sint civibus recusabo eos. An ius corpora
       definiebas cotidieque. Eu pri reque sapientem contentiones, fierent
       conclusionemque mei in. Saepe veniam ne mei, ut facilisi omittantur nec.
     </p>
     <br>
-    <p>
-      Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas.
+<p style="width: 100%">
+        Nam ad quas consul salutandi, sea ad verterem quaestio. Mei ea quot dictas.
       Eam choro eloquentiam eu, vim cu facete scriptorem. Mel at latine veritus.
     </p>
   </article>
-  <aside style="float: right; padding: 20px; justify: left">
-    <h3 style="justify: right; font-size: 1.25em; padding-bottom: 5px">
+  <aside style="padding: 20px;">
+
+    <h3 style="font-size: 1.25em; padding-bottom: 5px">
       <p><b>Larimer Square</b></p>
-      <img src="images/2.jpg" style="width: 200px; padding-bottom: 40px">
+      <img src="images/2.jpg" style="width: 200px; height: 25%; padding-bottom: 5%">
     </h3>
-    <h3 style="justify: right; font-size: 1.25em; padding-bottom: 5px ">
+    <br>
+    <h3 style="font-size: 1.25em; padding-bottom: 5px ">
       <p><b>Millenium Bridge</b></p>
-      <img src="images/5.jpg" style="width: 200px; padding-bottom: 40px">
+      <img src="images/5.jpg" style="width: 200px; height: 25%; padding-bottom: 5%">
     </h3>
-    <h3 style="justify: right; font-size: 1.25em; padding-bottom: 5px ">
+    <br>
+    <h3 style="font-size: 1.25em; padding-bottom: 5px ">
       <p><b>Molly Brown House</b></p>
-      <img src="images/3.jpg" style="width: 200px">
+      <img src="images/3.jpg" style="width: 200px; height: 25%; padding-bottom: 5%">
     </h3>
   </aside>
+</section>
   <footer>
-    <p style="text-align: center; vertical-align: middle">
+    <p style="text-align: center; padding: 5px">
       Alia utinam maiorum pro te, eum ex sonet putent discere. Mea cu possit
       forensibus comprehensam. Mel te primis commodo, nibh labore nostrum ei
       mel. Ex vix adolescens suscipiantur, malorum iuvaret usu id. At mea
